Updated for seo

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src\matrix-background-with-numbers-screen-binary-code-zero-one-coding-data-stream_546559-2018.jpg" />
+    <link rel="icon" type="image/svg+xml"  href="\logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Event</title>
+    
+    <meta name="description" content="A.M Jain College's Computer Science Department Event">
+    <meta name="keywords" content="Agurchand Manmull Jain College,hackathon,amj event,A.M jain event ,coding,hackathon amjain, AMJ Event, programming, events, tech">
+    <meta name="author" content="Gokul Raj">
+
+    <meta property="og:title" content="AMJ Event">
+    <meta property="og:description" content="A.M Jain College's Computer Science Department Event">
+    <meta property="og:image" content="https://amjevent.netlify.app/logo1.png">
+    <meta property="og:url" content="https://amjevent.netlify.app/">
+
+    <title>AMJ Event</title>
     <link href="https://fonts.googleapis.com/css2?family=Karma:wght@700&display=swap" rel="stylesheet">
 
   </head>
