--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
     <title>AMJ Event</title>
     <link href="https://fonts.googleapis.com/css2?family=Karma:wght@700&display=swap" rel="stylesheet">
-
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  
+
 </html>
